--- a/Contact.html
+++ b/Contact.html
@@ -235,7 +235,7 @@
                     <ul class="list-style-two color_orange">
                         <li><span class="icon fa fa-map-marker"></span>Post Box No : 112767 <br> Dubai, United Arab Emirates. </li>
                         <li><span class="icon fa fa-envelope-o"></span><a href="mailto:info@sitmea.com">info@sitmea.com</a></li>
-                        <li><span class="icon fa fa-phone"></span><a href="tel:+ 971 (0)425 4 3277">+ 971 (0)425 4 3277</a></li>
+                        <li><span class="icon fa fa-phone"></span><a href="tel:+ 971 (0) 4 5438500">+ 971 (0)425 4 3277</a></li>
                     </ul>
                 </div>
             </div>
